# ipc

./: .dockerignore  .env.template  .gitignore  .gitmodules  .markdownlint.yaml  .prettierignore  .solhint.json  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  GUIDE.md  INTERPRETER_FILES_ANALYSIS.md  INTERPRETER_INTEGRATION_STATUS.md  IPC_PROTOCOL_SPECIFICATION.md  MIGRATION_COMPLETE.md  Makefile  README.md  RECALL_DEPLOYMENT_GUIDE.md  RECALL_MIGRATION_LOG.md  RECALL_MIGRATION_PROGRESS.md  RECALL_MIGRATION_SUCCESS.md  RECALL_MIGRATION_SUMMARY.md  RECALL_OBJECTS_API_STATUS.md  RECALL_RUN.md  RECALL_TESTING_GUIDE.md  SECURITY.md  SUMMARY.md  audit-resolve.json  ci  contact-us.md  dagger.json  dev.md  foundry.toml  genesis.json  hardhat.config.ts  node.yaml  package-lock.json  package.json  pnpm-lock.yaml  (+8 more)
binding/: Cargo.toml  build.rs
binding/src/: diamond_cut_facet.rs  diamond_loupe_facet.rs  gateway_diamond.rs  gateway_getter_facet.rs  gateway_manager_facet.rs  gateway_messenger_facet.rs  gateway_router_facet.rs  i_diamond.rs  lib.rs  lib_gateway.rs  lib_quorum.rs  lib_staking.rs  lib_staking_change_log.rs  register_subnet_facet.rs  subnet_actor_checkpointing_facet.rs  subnet_actor_diamond.rs  subnet_actor_getter_facet.rs  subnet_actor_manager_facet.rs  subnet_actor_pause_facet.rs  subnet_actor_reward_facet.rs  subnet_getter_facet.rs  subnet_registry.rs  subnet_registry_diamond.rs  top_down_finality_facet.rs
common/metrics/: Cargo.toml
common/metrics/src/: lib.rs  prometheus.rs  tracing.rs
contract-bindings/: Cargo.toml  build.rs
contract-bindings/src/: error_macro.rs  error_parser.rs  lib.rs
dagger/: Cargo.toml  dagger.rs  minimal.rs
example/: Cargo.toml  README.md
example/src/: lib.rs  state.rs
ext/frc42_dispatch/: Cargo.toml
ext/frc42_dispatch/hasher/: Cargo.toml
ext/frc42_dispatch/macros/: Cargo.toml
ext/frc42_dispatch/src/: lib.rs  match_method.rs  message.rs
ext/gcra-rs/: Cargo.toml  LICENSE.md  README.md
ext/gcra-rs/examples/: gcra_check.rs  rate_limiter.rs
ext/gcra-rs/src/: gcra.rs  lib.rs  rate_limit.rs
ext/libp2p-bitswap/: Cargo.toml  build.rs
ext/libp2p-bitswap/src/: behaviour.rs  lib.rs  protocol.rs  query.rs  stats.rs
fendermint/abci/: Cargo.toml
fendermint/abci/examples/: kvstore.rs
fendermint/abci/src/: application.rs  lib.rs  util.rs
fendermint/actors/: Cargo.toml  build.rs
fendermint/actors-builder/: Cargo.toml  README.md
fendermint/actors-builder/src/: lib.rs
fendermint/actors-builtin-car/: Cargo.toml  build.rs
fendermint/actors-builtin-car/src/: lib.rs
fendermint/actors-custom-car/: Cargo.toml  README.md  build.rs
fendermint/actors-custom-car/src/: lib.rs  manifest.rs
fendermint/actors/.cargo/: config.toml
fendermint/actors/accumulator/: Cargo.toml
fendermint/actors/activity-tracker/: Cargo.toml
fendermint/actors/adm/: Cargo.toml
fendermint/actors/adm_types/: Cargo.toml
fendermint/actors/api/: Cargo.toml
fendermint/actors/blob_reader/: Cargo.toml
fendermint/actors/blobs/: Cargo.toml
fendermint/actors/bucket/: Cargo.toml
fendermint/actors/chainmetadata/: Cargo.toml
fendermint/actors/contentresolver/: Cargo.toml
fendermint/actors/customsyscall/: Cargo.toml
fendermint/actors/eam/: Cargo.toml
fendermint/actors/f3-cert-manager/: Cargo.toml
fendermint/actors/f3-light-client/: Cargo.toml
fendermint/actors/fluence/: Cargo.toml
fendermint/actors/gas/: Cargo.toml
fendermint/actors/gas_market/: Cargo.toml
fendermint/actors/hoku_config/: Cargo.toml
fendermint/actors/machine/: Cargo.toml
fendermint/actors/objectstore/: Cargo.toml
fendermint/actors/readreq/: Cargo.toml
fendermint/actors/recall_config/: Cargo.toml
fendermint/actors/src/: lib.rs  manifest.rs
fendermint/actors/timehub/: Cargo.toml
fendermint/app/: Cargo.toml
fendermint/app/config/: default.toml  dev.toml  test.toml
fendermint/app/options/: Cargo.toml
fendermint/app/settings/: Cargo.toml
fendermint/app/src/: app.rs  consensus_params.rs  events.rs  ipc.rs  keys.rs  lib.rs  main.rs  metrics.rs  observe.rs  options.rs  settings.rs  store.rs  tmconv.rs  upgrades.rs  validators.rs
fendermint/crypto/: Cargo.toml
fendermint/crypto/src/: lib.rs  quorum.rs  secp.rs
fendermint/infra/: .env  Cargo.toml  Makefile.toml  docker-compose.yml
fendermint/infra/scripts/: cometbft.toml  ethapi.toml  fendermint.toml  genesis.toml  subnet.toml  testnet.toml  testnode.toml
fendermint/rpc/: Cargo.toml
fendermint/rpc/examples/: simplecoin.rs  transfer.rs
fendermint/rpc/src/: client.rs  lib.rs  message.rs  query.rs  response.rs  tx.rs
fendermint/testing/: Cargo.toml
fendermint/testing/Makefile/: common.env  common.toml
fendermint/testing/contract-test/: Cargo.toml  user_actors_bundle.car
fendermint/testing/contracts/: Greeter.abi  Greeter.bin-runtime  Greeter.sol
fendermint/testing/graph-test/: Cargo.toml  Makefile.toml  README.md
fendermint/testing/materializer/: .gitignore  Cargo.toml  README.md  materializer-state.json
fendermint/testing/scripts/: ci.env  common.env  common.toml  get_port.sh
fendermint/testing/smoke-test/: Makefile.toml
fendermint/testing/snapshot-test/: Cargo.toml  Makefile.toml
fendermint/testing/src/: golden.rs  lib.rs  smt.rs
fendermint/upgrade_examples/: Cargo.toml  build.rs
fvm-utils/example/: Cargo.toml  build.rs
fvm-utils/example/src/: lib.rs  (+1 more)
fvm-utils/runtime/: Cargo.toml  README.md
hoku/blobs_syscall/: Cargo.toml
hoku/executor/: Cargo.toml
hoku/ipld/: Cargo.toml
identity/: Cargo.toml
identity/src/: keystore.rs  lib.rs  utils.rs  wallet.rs  wallet_helpers.rs
ipc-agent-sdk/: Cargo.toml
ipc-agent-sdk/src/: lib.rs
ipcvisor/: Cargo.toml
ipcvisor/src/: config.rs  fendermint.rs  init.rs  io.rs  lib.rs  main.rs  run.rs
ipld-resolver/: Cargo.toml  Makefile
ipld-resolver/scripts/: add_license.sh
ipld-resolver/src/: hash.rs  lib.rs  limiter.rs  provider_cache.rs  provider_record.rs  service.rs  signed_record.rs  vote_record.rs
ipld-resolver/tests/: smoke.rs
primitives/: Cargo.toml
primitives/src/: ethaddr.rs  lib.rs  taddress.rs  uints.rs
(+3311 files in other folders)
