[package]
name = "ipc_actors_abis"
description = "Rust contract-bindings for the IPC Solidity Actors"
version = "0.1.0"
authors = ["Protocol Labs"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ethers = { workspace = true, features = ["abigen", "ws"] }
fvm_shared = { workspace = true }
anyhow = { workspace = true }
fs-err = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
const-hex = { workspace = true }

[build-dependencies]
ethers = { workspace = true, features = ["abigen", "ws"] }
prettyplease = { version = "0.2" }
syn = { version = "2" }
fs-err = { version = "3" }
color-eyre = "0.6"
