[package]
name = "dagger"
version = "0.1.0"
edition = "2021"
default-run = "run-dagger-pipeline"

[[bin]]
name = "run-dagger-pipeline"
path = "dagger.rs"

[dependencies]
dagger-sdk = "0.16.1"
tokio = { version = "1", features = ["full"] }
thiserror = { version = "2" }
color-eyre = { version = "*" }
rand = "*"
toml = "*"
serde = "*"
fs-err = "*"
clap = { version = "4", features = ["derive"] }
