[package]
name = "fil_actor_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fil_actors_runtime = { path = "../runtime", features = ["test_utils", "fil-actor"] }
primitives = { path = "../primitives" }

fvm_sdk = "3.0.0-alpha.5"
fvm_shared = { version = "0.8.0", default-features = false }
fvm_ipld_hamt = "0.5.1"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.2"

cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
num-traits = "0.2.14"
num-derive = "0.3.3"
log = "0.4.14"
anyhow = "1.0.56"
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
#fvm = { git = "https://github.com/adlrocha/ref-fvm.git" }
#fvm_integration_tests = { git = "https://github.com/adlrocha/ref-fvm.git" }
libsecp256k1 = { version = "0.7" }
rand = "0.8"
rand_chacha = "0.3"
wasmtime = "0.35.2"
num-traits = "0.2"
wabt = "0.10.0"
blake2b_simd = "1.0.0"
base64 = "0.13.0"

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.35.2"
