[package]
name = "ipc-agent-sdk"
description = "The sdk to interact with ipc agent"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
async-channel = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
ipc-sdk = { workspace = true }
fvm_shared = { workspace = true }
futures-util = { workspace = true }
cid = { workspace = true }
log = { workspace = true }