[package]
name = "ipcvisor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }

[[bin]]
name = "ipcvisor"
path = "src/main.rs"
