[package]
name = "primitives"
version = "0.1.0"
description = "The primitive types for fvm"
edition = "2021"

[dependencies]
fil_actors_runtime = { path = "../runtime", features = ["fil-actor"] }
fvm_shared = { version = "=3.0.0-alpha.17", default-features = false }
fvm_ipld_hamt = "0.5.1"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.3.3"

num-traits = "0.2.14"
num-derive = "0.3.3"
log = "0.4.14"
indexmap = { version = "1.8.0", features = ["serde-1"] }
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
integer-encoding = { version = "3.0.3", default-features = false }
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.56"
hex = "0.4.3"
uint = { version = "0.9.3", default-features = false }
