[package]
name = "metrics_utils"
description = "Library to for metrics reporting"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
anyhow = { workspace = true }
paste = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }

tracing_utils = { path = "../tracing" }
