[package]
name = "gcra"
version = "0.4.0"
edition = "2021"
authors = ["Sam Shih <lytefast@github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lytefast/gcra-rs"
homepage = "https://github.com/lytefast/gcra-rs"
description = "A basic implementation of GCRA algorithm for rate limiting"
keywords = ["rate-limit", "rate", "limit", "gcra"]

[features]
default = ["rate-limiter"]
rate-limiter = ["dashmap", "rustc-hash"]

[dependencies]
dashmap = { version = "5.4.0", optional = true }
rustc-hash = { version = "1.1.0", optional = true }
thiserror = "1.0.39"

[dev-dependencies]
chrono = "0.4.23"
tokio = { version = "1.26.0", features = ["full"] }

[[example]]
name = "rate_limiter"
required-features = ["rate-limiter"]
