[package]
name = "libp2p-bitswap"
version = "0.25.1"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Implementation of the ipfs bitswap protocol."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ipfs-rust/libp2p-bitswap"

[features]
compat = ["prost", "prost-build"]

[build-dependencies]
prost-build = { version = "0.9.0", optional = true }

[dependencies]
async-trait = { workspace = true }
fnv = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
libipld = { workspace = true, default-features = false }
libp2p = { workspace = true , features = ["request-response"] }
prometheus = { workspace = true }
prost = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unsigned-varint = { version = "0.7.1", features = ["futures", "std"] }

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
env_logger = { workspace = true }
libipld = { workspace = true, default-features = false, features = ["dag-cbor"] }
libp2p = { workspace = true , features = ["tcp", "noise", "yamux", "rsa", "async-std"] }
multihash = { workspace = true , default-features = false, features = ["blake3", "sha2"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "tracing-log"] }
