[package]
name = "fendermint_abci"
description = "ABCI++ adapter using tendermint-rs and tower-abci"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
tower = "0.4"

tower-abci = { workspace = true }
tendermint = { workspace = true }


[dev-dependencies]
async-stm = { workspace = true }
im = "15.1.0"
structopt = "0.3"
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = "0.3"
