[package]
name = "actors-builder"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true

[dependencies]
color-eyre = { workspace = true }
fs-err = { workspace = true }
fil_actors_runtime = { workspace = true, features = ["test_utils"] }
fil_actor_bundler = "6.1.0"
num-traits = { workspace = true }
toml = "0.8.19"
substrate-wasm-builder = "25.0.0"
