[package]
name = "actors-builtin-car"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
fs-err = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
color-eyre = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
const-hex = "1"
build-rs-utils = { path = "../../build-rs-utils" }
